Fix header z-index

--- a/css/main.css
+++ b/css/main.css
@@ -634,7 +634,7 @@ body {
 
 .nav {
   position: fixed;
-  z-index: 1;
+  z-index: 98;
   left: 0;
   top: 8rem;
   width: 100%;
