--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -106,7 +106,7 @@ $menu-btn-h: 0.2rem
 
 .nav
   position: fixed
-  z-index: 1
+  z-index: 98
   left: 0
   top:  $header-height
   width: 100%
